[gd_scene load_steps=5 format=3 uid="uid://c5s20dplgixqn"]

[ext_resource type="Script" path="res://scripts/ui/PlayerUI.gd" id="1_44w70"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2x0bi"]
bg_color = Color(0.14902, 0.14902, 0.14902, 0.615686)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.247059, 0.247059, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00e0g"]
bg_color = Color(0.14902, 0.14902, 0.14902, 0.615686)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.247059, 0.247059, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0x8f2"]
bg_color = Color(0.14902, 0.14902, 0.14902, 0.615686)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.247059, 0.247059, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_44w70")

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthPanel" type="PanelContainer" parent="HUD"]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.05
anchor_bottom = 0.05
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2x0bi")

[node name="HealthLabel" type="Label" parent="HUD/HealthPanel"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Health: 100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoPanel" type="PanelContainer" parent="HUD"]
layout_mode = 0
anchor_left = 0.95
anchor_top = 0.95
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = -150.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_00e0g")

[node name="AmmoLabel" type="Label" parent="HUD/AmmoPanel"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Ammo: 30 / 30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourcePanel" type="HBoxContainer" parent="HUD"]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.12
anchor_right = 0.05
anchor_bottom = 0.12
offset_right = 150.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 0

[node name="GameOverPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0x8f2")
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Retry"